# shelter-chatbot

./: .env.example  BEFORE_AFTER.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  FREE_GEOCODING_GUIDE.md  FUTURE_ENHANCEMENTS.md  GEOCODING_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_LOCATION_EXTRACTION.md  LICENSE  LOCATION_SEARCH_ENHANCEMENT.md  LOCATION_SEARCH_TESTING.md  MAP_ENHANCEMENT_COMPLETE.md  MAP_FEATURE_SUMMARY.md  MAP_FIX_SUMMARY.md  Makefile  QUICKSTART_LOCATION_EXTRACTION.md  QUICK_REFERENCE.md  QUICK_START_LOCATION.md  RADIUS_SEARCH_FEATURE.md  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh  test_location_extraction.py  test_map.py
chromadb_data/2aabd7c9-9e59-4d79-a0b0-4ef1536c42ae/: index_metadata.pickle
chromadb_data/2c23d0ec-f569-4a1e-869c-52307728062b/: index_metadata.pickle
chromadb_data/64dbced8-75dd-475a-a430-8b64bf3760a7/: index_metadata.pickle
chromadb_data/d487b17b-8f3b-4609-a280-69f9022b9683/: index_metadata.pickle
scripts/: extract_coordinates.py
services/: README.md
services/llm-engine/: Dockerfile  geocoding.py  main.py  rag_engine.py  requirements.txt
services/scraper/: Dockerfile  main.py  processor.py  requirements.txt  scraper.py
services/ui/: Dockerfile  app.py  interactive_map.py  map_generator.py  requirements.txt
services/vectordb/: Dockerfile  chromadb_manager.py  main.py  requirements.txt
shared/: __init__.py  config.py  models.py
tests/: __init__.py  conftest.py  requirements.txt  test_integration.py  test_scraper.py  test_vectordb.py
